Fix: Login && Cadastro overflow problem

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5,6 +5,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body{
+    overflow-x: hidden; 
+}
+
 .header a,
 .header li {
     color: #967a5b;
